spacing issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@ html, body {
     overflow-x: hidden;
 }
 
+nav {
+    margin-bottom: none;
+}
+
 .collect {
     margin-top: -2.7vh;
 }
